# pgvector-python-contrib

./: .coverage  .gitignore  Makefile  README.md  dockerfile  mkdocs.yml  pyproject.toml  requirements.txt  test_bench.ipynb  wrangler.toml
docs/: README.md  index.md
docs/examples/: openai.md
docs/getting-started/: installation.md
pgvector/: bit.py
pgvector/sqlalchemy/: bit.py
tests/: test_bit.py  test_half_vector.py  test_sparse_vector.py  test_sqlalchemy.py  test_vector.py
