[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pgvector"
version = "0.4.1"
description = "pgvector support for Python"
readme = "README.md"
authors = [
    {name = "Andrew Kane", email = "andrew@ankane.org"}
]
license = "MIT"
requires-python = ">= 3.9"
dependencies = [
    "asyncpg>=0.30.0",
    "django>=4.2.23",
    "numpy==1.26.0",
    "peewee>=3.18.2",
    "pg8000>=1.31.2",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary,pool]>=3.2.9",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "scipy>=1.13.1",
    "sqlalchemy[asyncio]>=2",
    "sqlmodel>=0.0.12",
]

[project.urls]
Homepage = "https://github.com/pgvector/pgvector-python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
